--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,11 @@ straight/
 !straight/versions/default.el
 
 # others
+amx-items
 .lsp*
 opam-user-setup.el
 irony/
-amx-items
+image-dired/
 
 # Created by https://www.gitignore.io/api/emacs
 # Edit at https://www.gitignore.io/?templates=emacs
