look again on directory tree

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ amx-items
 opam-user-setup.el
 irony/
 image-dired/
+local/
 
 # Created by https://www.gitignore.io/api/emacs
 # Edit at https://www.gitignore.io/?templates=emacs
