--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
 deploy:
   provider: pages
   local_dir: docs
+  target_branch: gh-pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: true
