--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,34 @@
-notifications:
-  email:
-    on_success: never
-    on_failure: always
-
 language: generic
 dist: xenial
 
-before_script:
-  # Install Emacs 26
-  - sudo add-apt-repository ppa:kelleyk/emacs -y
-  - sudo apt-get update -q
-  - sudo apt-get install -y --no-install-recommends emacs26
-  # Check version
-  - emacs26 --version
+env:
+  global:
+    CURL="curl -fsSkL --retry 9 --retry-delay 9"
+  matrix:
+    - EMACS_VERSION=26
+    - EMACS_VERSION=master
+  allow_failure:
+    env: EMACS_VERSION=master
+
+before_install:
+  - sudo apt-get install libgnutls-dev -y
+
+install:
+  # Install Emacs to /tmp/emacs
+  - $CURL -O https://github.com/npostavs/emacs-travis/releases/download/bins/emacs-bin-${EMACS_VERSION}.tar.gz
+  - tar xf emacs-bin-${EMACS_VERSION}.tar.gz -C /
+  - export EMACS=/tmp/emacs/bin/emacs
+  - $EMACS --version
 
 script:
-  # Export HTML
-  - emacs26 -Q -batch --load=deploy-ghpages.el --visit=README.org --funcall=org-html-export-to-html
-  # Rename README.html to docs/index.html
+  - rm straight/versions/default.el
+  - $EMACS -batch --load=init.el --eval '(message "Test Passed.")'
+
+before_deploy:
+  - $EMACS -batch --load=init.el  --funcall=my-deploy-ghpage
   - mkdir -p docs
   - mv README.html docs/index.html
-  # Download CSS
-  - curl -sS https://orgmode.org/worg/style/worg.css -o docs/style.css
+  - $CURL https://orgmode.org/worg/style/worg.css -o docs/style.css
 
 deploy:
   provider: pages
@@ -32,3 +39,9 @@ deploy:
   keep_history: false
   on:
     branch: master
+    condition: $EMACS_VERSION=26
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
