--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ env:
   global:
     - CURL="curl -fsSkL --retry 9 --retry-delay 9"
   matrix:
-    - EMACS_VERSION=26
+    - EMACS_VERSION=26.1
+    - EMACS_VERSION=26.2
     - EMACS_VERSION=master
   allow_failures:
     env: EMACS_VERSION=master
@@ -13,7 +14,7 @@ env:
 install:
   # Install Emacs to /tmp/emacs
   - $CURL -O https://github.com/npostavs/emacs-travis/releases/download/bins/emacs-bin-${EMACS_VERSION}.tar.gz
-  - tar xf emacs-bin-${EMACS_VERSION}.tar.gz -C /
+  - tar -xaf emacs-bin-${EMACS_VERSION}.tar.gz -C /
   - export EMACS=/tmp/emacs/bin/emacs
   - $EMACS --version
 
@@ -36,7 +37,7 @@ deploy:
   keep_history: false
   on:
     branch: master
-    condition: $EMACS_VERSION = 26
+    condition: $EMACS_VERSION = 26.1
 
 notifications:
   email:
