--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ script:
                        (user-init-file (expand-file-name "init.el"))
                        (load-path (delq default-directory load-path)))
                    (load-file user-init-file)
-                   (run-hooks (quote after-init-hook)))' && \
+                   (run-hooks (quote after-init-hook))
+                   (my-deploy-ghpage))' && \
     echo "Startup succeeded."
 
 before_deploy:
